# automated-development-tutorial

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/automated_development_tutorial/: example.py
tests/: test_example.py
