[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automated_development_tutorial"
version = "0.0.1"
authors = [
  { name="Minh Nguyen", email="minh.nguyen@h-brs.de" },
]
description = "Repository for familiarizing with some common automated tools available for SW development."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HBRS-SDP/automated-development-tutorial"
"Bug Tracker" = "https://github.com/HBRS-SDP/automated-development-tutorial/issues"
